--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 					<p class="section__text">
 						You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
 					</p>
-					<p class="section__text"><a class="section__text-link" href="/site/index.html">Velocity</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
-					<p class="section__text"><a class="section__text-link" href="/app/index.html">DevStudio</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
+					<p class="section__text"><a class="section__text-link" href="site/index.html">Velocity</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
+					<p class="section__text"><a class="section__text-link" href="app/index.html">DevStudio</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
 					<p class="section__text"><a class="section__text-link" href="#">Tempo</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
 					<p class="section__text"><a class="section__text-link" href="#">Atom</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
 					<p class="section__text"><a class="section__text-link" href="#">Delta</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
