--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 					<p class="section__text">
 						You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
 					</p>
-					<p class="section__text"><a class="section__text-link" href="site/index.html">Velocity</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
-					<p class="section__text"><a class="section__text-link" href="site 2/index.html">DevStudio</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
+					<p class="section__text"><a class="section__text-link"  target="_blank" href="site/index.html">Wapick</a> - Not responsive website template designed to help to promote, market and sell their products.</p>
+					<p class="section__text"><a class="section__text-link" target="_blank" href="site 2/index.html">DevStudio</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
 					<p class="section__text"><a class="section__text-link" href="#">Tempo</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
 					<p class="section__text"><a class="section__text-link" href="#">Atom</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
 					<p class="section__text"><a class="section__text-link" href="#">Delta</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
@@ -143,15 +143,15 @@
 					<div class="container-icon">
 						<i class="far fa-envelope"></i>
 						<p class="column-items">
-						alan.doe@website.com</p>
+						workto22@gmail.com</p>
 					</div>
 					<div class="container-icon">
 						<i class="fas fa-mobile-alt"></i>
-						<p class="column-items">0123 456 789</p>
+						<p class="column-items">+375(25)900-05-31</p>
 					</div>	
 					<div class="container-icon">
 						<i class="fas fa-globe-americas"></i>
-						<p class="column-items">portfoliosite.com</p>
+						<p class="column-items">artyuhvladislav.github.io</p>
 					</div>
 					<div class="container-icon">
 						<i class="fab fa-linkedin-in"></i>
