--- a/index.html
+++ b/index.html
@@ -85,11 +85,10 @@
 					<p class="section__text">
 						You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
 					</p>
-					<p class="section__text"><a class="section__text-link"  target="_blank" href="site/index.html">Wapick</a> - Not responsive website template designed to help to promote, market and sell their products.</p>
-					<p class="section__text"><a class="section__text-link" target="_blank" href="site 2/index.html">DevStudio</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
-					<p class="section__text"><a class="section__text-link" href="#">Tempo</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
-					<p class="section__text"><a class="section__text-link" href="#">Atom</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
-					<p class="section__text"><a class="section__text-link" href="#">Delta</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
+					<p class="section__text"><a class="section__text-link"  target="_blank" href="site/index.html">First</a> - Not responsive website template designed to help to promote, market and sell their products.</p>
+					<p class="section__text"><a class="section__text-link" target="_blank" href="site 2/index.html">Second</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
+					<p class="section__text"><a class="section__text-link" href="wooder/wooder.html">Third</a> - A responsive website template designed to help startups promote, market and sell their products.</p>
+					
 				</section>
 
 
