--- a/index.html
+++ b/index.html
@@ -15,30 +15,28 @@
 			<div class="logo">
 				<img src="img/logo.png" alt="logo">
 			</div>
-							<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nobis molestias commodi officia, vel. Quo ratione vitae aliquid aliquam</p> <p class="description">provident nostrum itaque quam minima molestias. Provident labore error earum. Minima!</p>
+							<p class="description"><span>&#123;</span> Hello, I'm creating different websites such as Landing pages Internet shops e.c; My skills <span class="skills">HTML5, CSS3, JS, Jquery, Bootstrap4</span>  <span> &#125;</span></p> <p class="description">I'm also learning React for creating big applications in the future. For more information write me in Email</p>
 
 			<div class="buttons">
-				<button class="button button-portfolio">#portfolio</button>
-				<button class="button button-contact">#contact</button>
+				<button class="button button-portfolio"><a href="#portfolio">#portfolio</a></button>
+				<button class="button button-contact"><a href="#links">#contact</a></button>
 			</div>
 		</header>
 		
-		<section class="portfolio">
+		<section class="portfolio" id="portfolio">
 			<h1 class="title">&lt; Portfolio &gt;</h1>
 			<div class="portfolio-container">
-				<a href="site1/index.html" class="portfolio-link"><img src="img/circle-1.png" alt="portfolio-site"></a>
-				<a href="site2/wooder.html" class="portfolio-link"><img src="img/circle-1.png" alt="portfolio-site"></a>
-				<a href="site3/index.html" class="portfolio-link"><img src="img/circle-1.png" alt="portfolio-site"></a>
-				<a href="" class="portfolio-link"><img src="img/circle-1.png" alt="portfolio-site"></a>
-				<a href="" class="portfolio-link"><img src="img/circle-1.png" alt="portfolio-site"></a>
-				<a href="" class="portfolio-link"><img src="img/circle-1.png" alt="portfolio-site"></a>
+				<a href="site1/index.html" class="portfolio-link"><img src="img/site1.png" alt="portfolio-site"></a>
+				<a href="site2/wooder.html" class="portfolio-link"><img src="img/site2.png" alt="portfolio-site"></a>
+				<a href="site3/index.html" class="portfolio-link"><img src="img/site3.png" alt="portfolio-site"></a>
+				
 			</div>
 		</section>
-		<section class="links">
+		<section class="links" id="links">
 			<h1 class="title">&lt; Contacts &gt;</h1>
 			<ul class="links-container">
-				<li class="links-container--item"><a class="f" href="#"><i class="fab fa-vk"></i> Artyuh</a></li>
-				<li class="links-container--item"><a href="#"><i class="fas fa-envelope"></i> workto22@gmail.com</a></li>
+				<li class="links-container--item"><a href="https://vk.com/scwasd"><i class="fab fa-vk"></i> Artyuh</a></li>
+				<li class="links-container--item"><a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=workto22@gmail.com" target="_blank"><i class="fas fa-envelope"></i> workto22@gmail.com</a></li>
 			</ul>
 		</section>
 	</main>
