--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="logo">
 				<img src="img/logo.png" alt="logo">
 			</div>
-							<p class="description"><span>&#123;</span> Hello, I'm creating different websites such as Landing pages Internet shops e.c; My skills <span class="skills">HTML5, CSS3, JS, Jquery, Bootstrap4</span>  <span> &#125;</span></p> <p class="description">I'm also learning React for creating big applications in the future. For more information write me in Email</p>
+							<p class="description"><span>&#123;</span> Hello, I'm creating different websites such as Landing pages Internet shops e.c; My skills <span class="skills">HTML5, CSS3, JS, Jquery, Bootstrap4</span>  <span> &#125;</span></p> <p class="description"><span>&#123;</span> I'm also learning React for creating big applications in the future. For more information write me in Email <span> &#125;</span></p>
 
 			<div class="buttons">
 				<button class="button button-portfolio"><a href="#portfolio">#portfolio</a></button>
