--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</header>
 		
 		<section class="portfolio" id="portfolio">
-			<h2 class="title">&lt; Portfolio &gt;</h2>
+			<h2 class="title">&lt; Prtfolio &gt;</h2>
 			<div class="portfolio-container">
 				<a href="site1/index.html" class="portfolio-link"><img src="img/site1.png" alt="portfolio-site"></a>
 				<a href="site2/wooder.html" class="portfolio-link"><img src="img/site2.png" alt="portfolio-site"></a>
