--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
                <div class="face face1">
                    <div class="content">
                         <img src="img/eye.png" alt="eye">
-                       <h3>Design</h3>
+                       <h3>Netflix</h3>
                    </div>
                </div>
                <div class="face face2">
                    <div class="content">
                        
-                            <img src="img/site1.jpg" alt="wooder">
-                            <a href="">Click to watch</a>
+                            <img src="img/site4.jpg" alt="netflix">
+                            <a href="site4/index.html">Click to watch</a>
                       
                    </div>
                </div>
