--- a/site6/index.html
+++ b/site6/index.html
@@ -21,7 +21,7 @@
 	<!--CSS-->
 	<link rel="stylesheet" href="css/normalize.css">
   	<link rel="stylesheet" href="css/style.css">
-  	<!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A076559e36322c60657ed6769e73b9871f6c7571c8e5ed8a2f71b6b646c58ac49&amp;width=100%25&amp;height=400&amp;id=mymap&amp;lang=ru_RU&amp;scroll=true"></script> -->
+  	<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A076559e36322c60657ed6769e73b9871f6c7571c8e5ed8a2f71b6b646c58ac49&amp;width=100%25&amp;height=400&amp;id=mymap&amp;lang=ru_RU&amp;scroll=true"></script>
 	
   	
 </head>
