--- a/site6/index.html
+++ b/site6/index.html
@@ -55,7 +55,7 @@
 			</div>
 			<h1 class="main-title">Натяжные потолки
 				в  Сергив Посад</h1>
-			<p class="header-description">Рассрочка 0% до 24 		месяцевЧистый монтаж
+			<p class="header-description">Рассрочка 0% до 24 месяцев<br>Чистый монтаж
 			</p>
 			<a  href="#" class="btn-order">Вызвать мастера с каталогом</a>
 			<div class="top-slider">
@@ -1054,6 +1054,32 @@
 		<div class="container">
 			<div class="popup" onclick="myFunction()">Click me!
  							 <span class="popuptext" id="myPopup">Popup text...</span>
+			</div>
+			
+		</div>
+	</section>
+	<section class="box-section q-section">
+		<div class="container">
+			<h2 class="box-section__title">Часто задаваемые вопросы</h2>
+			<div class="q-wrapper">
+				<p class="big-question">Как сильно опустится потолок?</p>
+				<p class="answer">Потолок опустится незначительно. Натяжные потолки монтируются
+				на расстоянии 3 см от существующего потолка, если у него нет сильных перепадов</p>
+			</div>
+			<div class="q-wrapper">
+				<p class="big-question">Как сильно опустится потолок?</p>
+				<p class="answer">Потолок опустится незначительно. Натяжные потолки монтируются
+				на расстоянии 3 см от существующего потолка, если у него нет сильных перепадов</p>
+			</div>
+			<div class="q-wrapper">
+				<p class="big-question">Как сильно опустится потолок?</p>
+				<p class="answer">Потолок опустится незначительно. Натяжные потолки монтируются
+				на расстоянии 3 см от существующего потолка, если у него нет сильных перепадов</p>
+			</div>
+			<div class="q-wrapper">
+				<p class="big-question">Как сильно опустится потолок?</p>
+				<p class="answer">Потолок опустится незначительно. Натяжные потолки монтируются
+				на расстоянии 3 см от существующего потолка, если у него нет сильных перепадов</p>
 			</div>
 			
 		</div>
