--- a/site5/index.html
+++ b/site5/index.html
@@ -17,7 +17,7 @@
   	<!--CSS JQUERY-->
   	<link rel="stylesheet" href="libs/owl-carousel/assets/owl.carousel.css">
 	<link rel="stylesheet" href="libs/owl-carousel/assets/owl.theme.default.css">
-	<link rel="stylesheet" href="libs/hamburger/dist/hamburgers.css">
+
 	<link rel="stylesheet" href="libs/mmenu/dist/mmenu.css">
 	<!--CSS-->
 	<link rel="stylesheet" href="css/normalize.css">
@@ -1296,10 +1296,10 @@
 					<p>Гарантия, поддержка 24 часа и возврат средств</p>
 				</div>
 				<div class="footer-item footer-social">
-					 <img src="img/icons/vk.png" alt="">
-					 <img src="img/icons/ok.png" alt="">
-					 <img src="img/icons/fb.png" alt="">
-					 <img src="img/icons/g_plus.png" alt="">
+					 <a href="#"><img src="img/icons/vk.png" alt="soicial"></a>
+					 <a href="#"><img src="img/icons/ok.png" alt="soicial"></a>
+					  <a href="#"><img src="img/icons/fb.png" alt="soicial"></a>
+					  <a href="#"><img src="img/icons/g_plus.png" alt="soicial"></a>
 				</div>
 			</div>
 		</div>
