--- a/site6/gallery.html
+++ b/site6/gallery.html
@@ -20,9 +20,9 @@
 </head>
 
 <body>
-	<!-- <div class="preloader">
+	<div class="preloader">
 		<div class="pulse"></div>
-	</div> -->
+	</div>
 	<header class="main-header">
 		<div class="container">
 			<div class="header-top">
@@ -273,6 +273,7 @@
 		</div>
 	</footer>
 	<script src="libs/jquery/jquery-3.4.1.min.js"></script>
+	
 	<script src="js/main.js"></script>
 </body>
 </html>
