--- a/index.html
+++ b/index.html
@@ -212,6 +212,22 @@
             </div>
           </div>
         </div>
+        <div class="card">
+          <div class="face face1">
+            <div class="content">
+              <img src="img/eye.png" alt="eye">
+              <h3>Drum kit</h3>
+            </div>
+          </div>
+          <div class="face face2">
+            <div class="content">
+
+              <img src="img/site1.jpg" alt="drum kit">
+              <a href="./beats/index-START.html">Drum Kit app</a>
+
+            </div>
+          </div>
+        </div>
 
       </div>
     </section>
