fix: add income app to portfolio

--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
           </a>
         </div>
         
+        <div class="card">
+          <a href="/income/index.html" target="_blank">
+            <div class="content">
+              <h3>Beats</h3>
+              <img src="img/income.jpg" alt="income">
+            </div>
+          </a>
+        </div>
 
       </div>
     </section>
