fix: fix title Income app

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="card">
           <a href="/income/index.html" target="_blank">
             <div class="content">
-              <h3>Beats</h3>
+              <h3>Income App</h3>
               <img src="img/income.jpg" alt="income">
             </div>
           </a>
