--- a/index.html
+++ b/index.html
@@ -148,6 +148,14 @@
           </a>
         </div>
 
+        <div class="card">
+          <a href="./goodstudio/goodstudio/public/index.html" target="_blank">
+            <div class="content">
+              <h3>Test Task Goodstudio</h3>
+              <img src="" alt="good studio">
+            </div>
+          </a>
+        </div>
       </div>
     </section>
   </main>
