--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
 
         <div class="card">
-          <a href="./goodstudio/goodstudio//build/index.html" target="_blank">
+          <a href="./goodstudio/goodstudio/build/index.html target="_blank">
             <div class="content">
               <h3>Test Task Goodstudio</h3>
               <img src="" alt="good studio">
