fix: fixing old project section

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </p>
                   </div>
                 </a>
-                <a  class="link" href="https://github.com/artyuhvladislav/pizza">github repository link</a>
+                <a  class="link" href="https://github.com/artyuhvladislav/pizza">{ github repository link }</a>
               </div>
 
             </div>
