add: add new project to a new project section

--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
                 <a  class="link" href="https://github.com/artyuhvladislav/pizza">{ github repository link }</a>
               </div>
 
+              <div class="card">
+                <a href="https://r-socket-chat.herokuapp.com/" target="_blank">
+                  <div class="content">
+                    <img src="img/chat.png" alt="Chat">
+                  </div>
+                  <div class="card-description">
+                    <h3>Real time chat</h3>
+                    <p>It's a react app with socket.io. Stack React, Socket.
+                    </p>
+                  </div>
+                </a>
+                <a  class="link" href="https://github.com/artyuhvladislav/chat">{ github repository link }</a>
+              </div>
+
             </div>
           </section>
         </div>
