add: add cv pdf

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           <a class="link" href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=workto22@gmail.com"
             target="_blank">@gmail</a>
           <a class="link" href="https://t.me/tvlad_ivanov" target="_blank">telegram</a>
-          <a class="link" href="https://github.com/artyuhvladislav" target="_blank">github</a>'
+          <a class="link" href="https://github.com/artyuhvladislav" target="_blank">github</a>
+          <a class="link" href="http://artyuhvladislav.github.io/cv.pdf" target="_blank">resume.pdf</a>'
         </p>
         <p class="description-code">}</p>
       </div>
@@ -101,7 +102,7 @@
             <div class="portfolio-container">
 
               <div class="card">
-                <a href="http://react-pizza-prjct.herokuapp.com/" target="_blank">
+                <a href="https://react-pizza-prjct.herokuapp.com/" target="_blank">
                   <div class="content">
                     <img src="img/pizza.jpg" alt="Pizza">
                   </div>
