--- a/index.html
+++ b/index.html
@@ -78,16 +78,14 @@
             <div class="portfolio-container">
 
               <div class="card">
-                <a href="site2/wooder.html" target="_blank">
+                <a href="https://github.com/artyuhvladislav/react-practice" target="_blank">
                   <div class="content">
-                    <img src="img/site1.jpg" alt="wooder">
+                    <img src="img/site1.jpg" alt="social network">
                   </div>
                   <div class="card-description">
-                    <h3>Wooder</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Aspernatur, quaerat ullam. Consectetur nobis itaque ex
-                      ipsum aperiam dolor quia, reprehenderit nam illum nemo debitis
-                      fugiat ad. Quisquam minus doloremque perspiciatis.
+                    <h3>Social network</h3>
+                    <p>Social network with next technologies: React, Redux
+                      currently in process 
                     </p>
                   </div>
                 </a>
