add: add new description

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
                     <h3>Pizza store</h3>
                     <p>It's a react app with fake json-server data. Stack React, Redux, json-server.
                     </p>
+                    <p>
+                      Warning! It takes time before "heroku" will compile the project
+                     </p>
                   </div>
                 </a>
                 <a  class="link" href="https://github.com/artyuhvladislav/pizza">{ github repository link }</a>
@@ -122,6 +125,9 @@
                     <h3>Real time chat</h3>
                     <p>It's a react app with socket.io. Stack React, Socket.
                     </p>
+                    <p>
+                      Warning! It takes time before "heroku" will compile the project
+                     </p>
                   </div>
                 </a>
                 <a  class="link" href="https://github.com/artyuhvladislav/chat">{ github repository link }</a>
