feat: add weather project

--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
             <div class="portfolio-container">
 
               <div class="card">
+                <a href="https://weather-ts-gql.herokuapp.com/" target="_blank">
+                  <div class="content">
+                    <img src="https://www.androidcentral.com/sites/androidcentral.com/files/styles/large/public/article_images/2021/02/flux-weather-app-icon.jpg" alt="weather">
+                  </div>
+                  <div class="card-description">
+                    <h3>Weather app</h3>
+                    <p>It's a react app on typeScript with example of form auth. Stack React, typeScript, graphQL, apollo, formik, validation with yup.
+                    </p>
+                    <p>
+                      Warning! It takes time before "heroku" will compile the project
+                     </p>
+                  </div>
+                </a>
+                <a  class="link" href="https://github.com/artyuhvladislav/react-ts">{ github repository link }</a>
+              </div>
+              
+              <div class="card">
                 <a href="https://react-pizza-prjct.herokuapp.com/" target="_blank">
                   <div class="content">
                     <img src="img/pizza.jpg" alt="Pizza">
