--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
       </div>
       <div class="description highlight-color">
         <p class="description-code">const code = () =&gt; {</p>
-        <p class="code-body"><span class="code">return '</span>Hello, my name is Vlad and I'm junior front-end developer. 
+        <p class="code-body"><span class="code">return '</span>Hello, my name is Vlad and I'm junior front-end
+          developer.
           I'm from Belarus but now living in Poland.
-          I'm creating different websites using pure js and for SPA React and Redux. You can see a few of them in my 
-          <a href="#portfolio" class="link">#portfolio</a><span class="code">';</span></p>
+          I'm creating different websites using pure js and for SPA React and Redux. You can see a few of them in my
+          <a href="#portfolio" class="link">#portfolio</a><span class="code">';</span>
+        </p>
         <p class="description-code">}</p>
       </div>
 
       <div class="description highlight-color">
         <p class="description-code">const skills = () =&gt; {</p>
-        <p class="code-body"><span class="code">return '</span>I am trying to improve my code skills everyday, find out new variants for solving code problems.
+        <p class="code-body"><span class="code">return '</span>I am trying to improve my code skills everyday, find out
+          new variants for solving code problems.
           At this moment I have good skills at :
           <span class="link">JS, React, Redux</span>.<span class="code">';</span>
         </p>
@@ -68,7 +71,7 @@
             alt="Home" class="navlogo">First experience(layout & js stuff)</div>
       </div>
     </section>
-    
+
     <section class="tab-content">
       <div class="container">
         <!--tab-1 section-->
@@ -85,7 +88,7 @@
                   <div class="card-description">
                     <h3>Social network</h3>
                     <p>Social network with next technologies: React, Redux
-                      currently in process 
+                      currently in process
                     </p>
                   </div>
                 </a>
@@ -102,20 +105,23 @@
               <div class="card">
                 <a href="https://weather-ts-gql.herokuapp.com/" target="_blank">
                   <div class="content">
-                    <img src="https://www.androidcentral.com/sites/androidcentral.com/files/styles/large/public/article_images/2021/02/flux-weather-app-icon.jpg" alt="weather">
+                    <img
+                      src="https://www.androidcentral.com/sites/androidcentral.com/files/styles/large/public/article_images/2021/02/flux-weather-app-icon.jpg"
+                      alt="weather">
                   </div>
                   <div class="card-description">
                     <h3>Weather app</h3>
-                    <p>It's a react app on typeScript with example of form auth. Stack React, typeScript, graphQL, apollo, formik, validation with yup.
+                    <p>It's a react app on typeScript with example of form auth. Stack React, typeScript, graphQL,
+                      apollo, formik, validation with yup.
                     </p>
                     <p>
                       Warning! It takes time before "heroku" will compile the project
-                     </p>
+                    </p>
                   </div>
                 </a>
-                <a  class="link" href="https://github.com/artyuhvladislav/react-ts">{ github repository link }</a>
+                <a class="link" href="https://github.com/artyuhvladislav/react-ts">{ github repository link }</a>
               </div>
-              
+
               <div class="card">
                 <a href="https://react-pizza-prjct.herokuapp.com/" target="_blank">
                   <div class="content">
@@ -127,10 +133,25 @@
                     </p>
                     <p>
                       Warning! It takes time before "heroku" will compile the project
-                     </p>
+                    </p>
                   </div>
                 </a>
-                <a  class="link" href="https://github.com/artyuhvladislav/pizza">{ github repository link }</a>
+                <a class="link" href="https://github.com/artyuhvladislav/pizza">{ github repository link }</a>
+              </div>
+
+              <div class="card">
+                <a href="https://trello-ts.herokuapp.com/" target="_blank">
+                  <div class="content">
+                    <img src="img/Trello.jpg" alt="Trello">
+                  </div>
+                  <div class="card-description">
+                    <h3>Copy Trello</h3>
+                    <p>It's a react app with typescript and redux-toolkit, for drag and drop I use react beautiful dnd.
+                      Stack React, Redux, TypeScript, React beautiful dnd.
+                    </p>
+                  </div>
+                </a>
+                <a class="link" href="https://github.com/artyuhvladislav/trello">{ github repository link }</a>
               </div>
 
               <div class="card">
@@ -144,10 +165,10 @@
                     </p>
                     <p>
                       Warning! It takes time before "heroku" will compile the project
-                     </p>
+                    </p>
                   </div>
                 </a>
-                <a  class="link" href="https://github.com/artyuhvladislav/chat">{ github repository link }</a>
+                <a class="link" href="https://github.com/artyuhvladislav/chat">{ github repository link }</a>
               </div>
 
             </div>
@@ -166,7 +187,7 @@
                   </div>
                   <div class="card-description">
                     <h3>Wooder</h3>
-                    <p>Simple example of layout  HTML, CSS, JS no responsive.
+                    <p>Simple example of layout HTML, CSS, JS no responsive.
                     </p>
                   </div>
                 </a>
@@ -179,7 +200,8 @@
                   </div>
                   <div class="card-description">
                     <h3>Todo app</h3>
-                    <p>It's a cute to do app where you can write your task for a day. At this project were using HTM, CSS, JS, DOM manipulation.
+                    <p>It's a cute to do app where you can write your task for a day. At this project were using HTM,
+                      CSS, JS, DOM manipulation.
                     </p>
                   </div>
                 </a>
@@ -192,7 +214,7 @@
                   </div>
                   <div class="card-description">
                     <h3>Eltehno</h3>
-                    <p>It's a cool responsive site for electehno company. Stack of the 
+                    <p>It's a cool responsive site for electehno company. Stack of the
                       technologies: HTML, SCSS, JS.
                     </p>
                   </div>
