--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h2 class="title">New projects</h2>
             <div class="portfolio-container">
 
-              <div class="card">
+              <!-- <div class="card">
                 <a href="https://weather-ts-gql.herokuapp.com/" target="_blank">
                   <div class="content">
                     <img
@@ -120,8 +120,30 @@
                   </div>
                 </a>
                 <a class="link" href="https://github.com/artyuhvladislav/react-ts">{ github repository link }</a>
+              </div> -->
+              <div class="card">
+                <a href="./excel/index.html" target="_blank">
+                  <div class="content">
+                    <img
+                      src="https://play-lh.googleusercontent.com/37EzETO6gZyKmCg2kBIFX1e9gkubxZrVa5fHJ6yOaa7VvEShHjKv2RdtwnZt9Sk258s"
+                      alt="excel">
+                  </div>
+                  <div class="card-description">
+                    <h3>Excel app</h3>
+                    <p>It's a small copy of excel where you can change size of the columns and rows,
+                      select cell or cells with holding shift key, change style of the cell's content
+                    </p>
+                    <p>Technologies:
+                      This app was written with js and bundled by webpack
+                      OOP principles
+                      Components
+                      BLL and UI (Flux architecture)
+                      Styles with scss
+                    </p>
+                  </div>
+                </a>
+                <a class="link" href="https://github.com/artyuhvladislav/excel">{ github repository link }</a>
               </div>
-
               <div class="card">
                 <a href="https://react-pizza-prjct.herokuapp.com/" target="_blank">
                   <div class="content">
