modify react pizza store

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <a class="link" href="https://github.com/artyuhvladislav/excel">{ github repository link }</a>
               </div>
               <div class="card">
-                <a href="https://react-pizza-prjct.herokuapp.com/" target="_blank">
+                <a href="https://react-pizza-v2.vercel.app/" target="_blank">
                   <div class="content">
                     <img src="img/pizza.jpg" alt="Pizza">
                   </div>
@@ -158,7 +158,7 @@
                     </p>
                   </div>
                 </a>
-                <a class="link" href="https://github.com/artyuhvladislav/pizza">{ github repository link }</a>
+                <a class="link" href="https://github.com/artyuhvladislav/react-pizza-v2">{ github repository link }</a>
               </div>
 
               <div class="card">
