--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <a class="link" href="https://github.com/artyuhvladislav/excel">{ github repository link }</a>
               </div>
               <div class="card">
-                <a href="https://react-pizza-v2.vercel.app/" target="_blank">
+                <a href="https://pizzas-ts.herokuapp.com/" target="_blank">
                   <div class="content">
                     <img src="img/pizza.jpg" alt="Pizza">
                   </div>
