--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <a class="link" href="https://github.com/artyuhvladislav/excel">{ github repository link }</a>
               </div>
               <div class="card">
-                <a href="https://pizzas-ts.herokuapp.com/" target="_blank">
+                <a href="https://pizza-ts-v2.netlify.app" target="_blank">
                   <div class="content">
                     <img src="img/pizza.jpg" alt="Pizza">
                   </div>
@@ -162,7 +162,7 @@
               </div>
 
               <div class="card">
-                <a href="https://trello-ts.herokuapp.com/" target="_blank">
+                <a href="https://trello-coppy.netlify.app/" target="_blank">
                   <div class="content">
                     <img src="img/Trello.jpg" alt="Trello">
                   </div>
