--- a/index.html
+++ b/index.html
@@ -101,26 +101,6 @@
           <section class="portfolio" id="portfolio">
             <h2 class="title">New projects</h2>
             <div class="portfolio-container">
-
-              <!-- <div class="card">
-                <a href="https://weather-ts-gql.herokuapp.com/" target="_blank">
-                  <div class="content">
-                    <img
-                      src="https://www.androidcentral.com/sites/androidcentral.com/files/styles/large/public/article_images/2021/02/flux-weather-app-icon.jpg"
-                      alt="weather">
-                  </div>
-                  <div class="card-description">
-                    <h3>Weather app</h3>
-                    <p>It's a react app on typeScript with example of form auth. Stack React, typeScript, graphQL,
-                      apollo, formik, validation with yup.
-                    </p>
-                    <p>
-                      Warning! It takes time before "heroku" will compile the project
-                    </p>
-                  </div>
-                </a>
-                <a class="link" href="https://github.com/artyuhvladislav/react-ts">{ github repository link }</a>
-              </div> -->
               <div class="card">
                 <a href="./excel/index.html" target="_blank">
                   <div class="content">
@@ -151,16 +131,33 @@
                   </div>
                   <div class="card-description">
                     <h3>Pizza store</h3>
-                    <p>It's a react app with fake json-server data. Stack React, Redux, json-server.
+                    <p>The frontend part was written with react and backend with node.js and mongoDB as DB. The app
+                      includes: components, pages, sorting, searching, pagination,
+                      filtering, popup windows, etc. Interaction with the backend, backend requests.
+                      Design pages navigation without reloading. A global data stores for the entire applications.
+                      Strongly typed code in TypeScript. LocalStorage to store sites settings. Lazy Loading (lazy
+                      loading) + debounce (optimization for finding pizzas). Optimized components
+                      redraws/renders, code splitting (separating code into specific JS files), and JS file
+                      tracking.
                     </p>
-                    <p>
-                      Warning! It takes time before "heroku" will compile the project
-                    </p>
+                    <p>Worked with:
+                      TypeScript
+                      React,
+                      React-router v6
+                      Redux toolkit
+                      HTML5
+                      SCSS
+                      REST API, axios,
+                      node
+                      mongoDB
+                      mongoose
+                      express
+                      postman</p>
                   </div>
                 </a>
-                <a class="link" href="https://github.com/artyuhvladislav/react-pizza-v2">{ github repository link }</a>
+                <a class="link" href="https://github.com/artyuhvladislav/react-pizza-v2">{ github repository link
+                  }</a>
               </div>
-
               <div class="card">
                 <a href="https://trello-coppy.netlify.app/" target="_blank">
                   <div class="content">
@@ -170,6 +167,7 @@
                     <h3>Copy Trello</h3>
                     <p>It's a react app with typescript and redux-toolkit, for drag and drop I use react beautiful dnd.
                       Stack React, Redux, TypeScript, React beautiful dnd.
+                      No mobile view.
                     </p>
                   </div>
                 </a>
