--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       </div>
 
       <div class="description">
-        <p class="description-code">const name = '<span>Vladislav Artyuh</span>';</p>
+        <p class="description-code">const name = '<span>Wladyslaw Artsiukh</span>';</p>
       </div>
       <div class="description highlight-color">
         <p class="description-code">const code = () =&gt; {</p>
-        <p class="code-body"><span class="code">return '</span>Hello, my name is Vlad and I'm junior front-end
+        <p class="code-body"><span class="code">return '</span>Hello, my name is Wlad and I'm a front-end
           developer.
           I'm from Belarus but now living in Poland.
           I'm creating different websites using pure js and for SPA React and Redux. You can see a few of them in my
@@ -40,7 +40,7 @@
         <p class="code-body"><span class="code">return '</span>I am trying to improve my code skills everyday, find out
           new variants for solving code problems.
           At this moment I have good skills at :
-          <span class="link">JS, React, Redux</span>.<span class="code">';</span>
+          <span class="link">TypeScript, React, Redux, node, monoDB</span>.<span class="code">';</span>
         </p>
         <p class="description-code">}</p>
       </div>
