update current project

--- a/index.html
+++ b/index.html
@@ -81,17 +81,38 @@
             <div class="portfolio-container">
 
               <div class="card">
-                <a href="https://github.com/artyuhvladislav/react-practice" target="_blank">
+                <a href="https://pizza-ts-v2.netlify.app" target="_blank">
                   <div class="content">
-                    <img src="img/site1.jpg" alt="social network">
+                    <img src="img/pizza.jpg" alt="Pizza">
                   </div>
                   <div class="card-description">
-                    <h3>Social network</h3>
-                    <p>Social network with next technologies: React, Redux
-                      currently in process
+                    <h3>Pizza store</h3>
+                    <p>The frontend part was written with react and backend with node.js and mongoDB as DB. The app
+                      includes: components, pages, sorting, searching, pagination,
+                      filtering, popup windows, etc. Interaction with the backend, backend requests.
+                      Design pages navigation without reloading. A global data stores for the entire applications.
+                      Strongly typed code in TypeScript. LocalStorage to store sites settings. Lazy Loading (lazy
+                      loading) + debounce (optimization for finding pizzas). Optimized components
+                      redraws/renders, code splitting (separating code into specific JS files), and JS file
+                      tracking.
                     </p>
+                    <p>Worked with:
+                      TypeScript
+                      React,
+                      React-router v6
+                      Redux toolkit
+                      HTML5
+                      SCSS
+                      REST API, axios,
+                      node
+                      mongoDB
+                      mongoose
+                      express
+                      postman</p>
                   </div>
                 </a>
+                <a class="link" href="https://github.com/artyuhvladislav/react-pizza-v2">{ github repository link
+                  }</a>
               </div>
             </div>
           </section>
